[gd_scene load_steps=19 format=2]

[ext_resource path="res://escena/joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/performance_settings.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 40 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.1, 0.5, 0.8, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.8, 0.6, 0.1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.1, 0.7, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.8, 0.1, 0.1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.3, 0.3, 0.3, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.05, 0.05, 0.05, 0.95 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.2, 0.6, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.2, 0.8, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.5, 0.9, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.9, 0.9, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.2, 0.8, 0.9, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.9, 0.2, 0.6, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.9, 0.4, 0.1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 2.0
content_margin_bottom = 2.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ControlUI" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="FPSLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -130.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 30.0
rect_min_size = Vector2( 110, 20 )
text = "FPS: 0"
align = 1
valign = 1
custom_styles/normal = SubResource( 20 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
mouse_filter = 1
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0

[node name="TopSpacer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 346.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 924.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 150 )
custom_constants/separation = 0

[node name="MoveJoystickContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 260.0
margin_bottom = 150.0
rect_min_size = Vector2( 260, 200 )

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveJoystickContainer"]
margin_right = 260.0
margin_bottom = 100.0
alignment = 1

[node name="ZoomButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveJoystickContainer/ButtonContainer"]
margin_left = 46.0
margin_right = 126.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "ZOOM"

[node name="FlashlightButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveJoystickContainer/ButtonContainer"]
margin_left = 134.0
margin_right = 214.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "LINTERNA"

[node name="MoveJoystick" parent="MarginContainer/VBoxContainer/HBoxContainer/MoveJoystickContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 185.0
rect_min_size = Vector2( 260, 200 )
size_flags_vertical = 3

[node name="StackExtraL" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 265.0
margin_right = 375.0
margin_bottom = 250.0
rect_min_size = Vector2( 110, 0 )
custom_constants/separation = 5
alignment = 2

[node name="ExtraBtnL1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraL"]
margin_right = 110.0
margin_bottom = 80.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 14 )
text = "L1"

[node name="ExtraBtnL2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraL"]
margin_top = 85.0
margin_right = 110.0
margin_bottom = 165.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 16 )
text = "L2"

[node name="ExtraBtnL3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraL"]
margin_top = 170.0
margin_right = 110.0
margin_bottom = 250.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 18 )
text = "L3"

[node name="CenterSpacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 554.0
margin_bottom = 185.0
size_flags_horizontal = 3

[node name="StackExtraR" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 559.0
margin_right = 669.0
margin_bottom = 250.0
rect_min_size = Vector2( 110, 0 )
custom_constants/separation = 5
alignment = 2

[node name="ExtraBtnR1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraR"]
margin_right = 110.0
margin_bottom = 80.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 15 )
text = "R1"

[node name="ExtraBtnR2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraR"]
margin_top = 85.0
margin_right = 110.0
margin_bottom = 165.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 17 )
text = "R2"

[node name="ExtraBtnR3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/StackExtraR"]
margin_top = 170.0
margin_right = 110.0
margin_bottom = 250.0
rect_min_size = Vector2( 110, 80 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 19 )
text = "R3"

[node name="CameraJoystickContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 944.0
margin_bottom = 185.0
rect_min_size = Vector2( 260, 200 )

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CameraJoystickContainer"]
margin_right = 260.0
margin_bottom = 100.0
alignment = 1

[node name="ActionButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CameraJoystickContainer/ButtonContainer"]
margin_left = 46.0
margin_right = 126.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 6 )
text = "ACTION"

[node name="JumpButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CameraJoystickContainer/ButtonContainer"]
margin_left = 134.0
margin_right = 214.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.8, 1 )
custom_colors/font_color_pressed = Color( 0.9, 0.9, 0.9, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "SALTAR"

[node name="CameraJoystick" parent="MarginContainer/VBoxContainer/HBoxContainer/CameraJoystickContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 185.0
rect_min_size = Vector2( 260, 200 )
size_flags_vertical = 3

[node name="SetupButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -90.0
margin_top = 45.0
margin_right = -30.0
margin_bottom = 105.0
rect_min_size = Vector2( 60, 60 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
text = "SETUP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 200 )
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 196.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="SettingsPanel/VBoxContainer"]
margin_right = 292.0
margin_bottom = 14.0
text = "CONFIGURACIÓN"
align = 1

[node name="GridContainer" type="GridContainer" parent="SettingsPanel/VBoxContainer"]
margin_top = 29.0
margin_right = 292.0
margin_bottom = 119.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/GridContainer"]
margin_top = 13.0
margin_right = 196.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Sombras Dinámicas"

[node name="ShadowToggle" type="CheckButton" parent="SettingsPanel/VBoxContainer/GridContainer"]
margin_left = 216.0
margin_right = 292.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="SettingsPanel/VBoxContainer/GridContainer"]
margin_top = 53.0
margin_right = 196.0
margin_bottom = 67.0
size_flags_horizontal = 3
text = "Dia y Noche"

[node name="DayNightToggle" type="CheckButton" parent="SettingsPanel/VBoxContainer/GridContainer"]
margin_left = 216.0
margin_top = 50.0
margin_right = 292.0
margin_bottom = 90.0

[node name="Spacer" type="Control" parent="SettingsPanel/VBoxContainer"]
margin_top = 134.0
margin_right = 292.0
margin_bottom = 137.0
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="SettingsPanel/VBoxContainer"]
margin_top = 152.0
margin_right = 292.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "CERRAR"
